Render Border - Operator Panel - Only Camera - Broken? #41206

Closed
opened 2014-07-27 14:04:10 +02:00 by Terry Wallwork · 7 comments

System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

I am using Blender GIT Rev af16265 on a Fedora 20 Linux 64Bit Box with an Intel 3000 HD GFX.

I noticed while trying to document [3D View Editor Header > View Menu > Render Border]. That when Render Border is activated
on a 3D Viewport a single Operator Panel option is displayed "Camera Only". As I read it this is supposed to limit when A set
Render Border is active such that the Render Border will only be respected when doing final render or in camera view?

But if I set a render border outside of camera view and select the "Camera Only" option, the set Render Border is not set for
Camera View.

I notice that I could simply set Render Border views differently depending on weather I am in Camera View or Viewport View
mode. So in effect Blender seems to support two different Border Renders at once, one for Camera View and the other outside it.

So I wonder if the Camera Only option is for, I can't seem to make it do anything different.

Another issue I noticed while trying to solve this for myself is that in previous versions of Blender when the Render Border
tool is used the Operator Panel would also display a series of value controls that allowed you to set the bounds of the Render
Border numerically. These fields no longer seem to be present? Is this intentional or a regression? See attached picture for
example and url:

  
  http://blender.stackexchange.com/questions/2014/render-borders-related-check-boxes-how-do-they-work

I have attached my system-info.txt, a blend file and a video showing the issue I am having and a picture of previous operator
panel layout when Render Border is activated.

Apologies if I am misunderstanding this issue.

RenderBorder-OperatorPanelValues.png

system-info.txt

RenderBorder-OperatorPanel-CameraOnly-Bug_.blend

RenderBorder-OperatorPanel-OnlyCamera.webm

**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I am using Blender GIT Rev af16265 on a Fedora 20 Linux 64Bit Box with an Intel 3000 HD GFX. I noticed while trying to document [3D View Editor Header > View Menu > Render Border]. That when Render Border is activated on a 3D Viewport a single Operator Panel option is displayed "Camera Only". As I read it this is supposed to limit when A set Render Border is active such that the Render Border will only be respected when doing final render or in camera view? But if I set a render border outside of camera view and select the "Camera Only" option, the set Render Border is not set for Camera View. I notice that I could simply set Render Border views differently depending on weather I am in Camera View or Viewport View mode. So in effect Blender seems to support two different Border Renders at once, one for Camera View and the other outside it. So I wonder if the Camera Only option is for, I can't seem to make it do anything different. Another issue I noticed while trying to solve this for myself is that in previous versions of Blender when the Render Border tool is used the Operator Panel would also display a series of value controls that allowed you to set the bounds of the Render Border numerically. These fields no longer seem to be present? Is this intentional or a regression? See attached picture for example and url: ``` http://blender.stackexchange.com/questions/2014/render-borders-related-check-boxes-how-do-they-work ``` I have attached my system-info.txt, a blend file and a video showing the issue I am having and a picture of previous operator panel layout when Render Border is activated. Apologies if I am misunderstanding this issue. ![RenderBorder-OperatorPanelValues.png](https://archive.blender.org/developer/F99827/RenderBorder-OperatorPanelValues.png) [system-info.txt](https://archive.blender.org/developer/F99826/system-info.txt) [RenderBorder-OperatorPanel-CameraOnly-Bug_.blend](https://archive.blender.org/developer/F99829/RenderBorder-OperatorPanel-CameraOnly-Bug_.blend) [RenderBorder-OperatorPanel-OnlyCamera.webm](https://archive.blender.org/developer/F99830/RenderBorder-OperatorPanel-OnlyCamera.webm)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @TerryWallwork-1

Added subscriber: @TerryWallwork-1

This issue was referenced by 1a9252d97e

This issue was referenced by 1a9252d97e409887fe65cbbc508ec7d53cd98f17

Added subscriber: @Sergey

Added subscriber: @Sergey

This option is only for the keymap, to make it possible to have both Ctrl-B and Shift-B work in the camera view so muscule memory is not broken but make it so Shift-B in the the non-camera view does zoom to border. Will hide this option from the panel in the next commit.

This option is only for the keymap, to make it possible to have both `Ctrl-B` and `Shift-B` work in the camera view so muscule memory is not broken but make it so Shift-B in the the non-camera view does zoom to border. Will hide this option from the panel in the next commit.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1a9252d97e.

Closed by commit 1a9252d97e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41206
No description provided.