Fix T41206: Render Border - Operator Panel - Only Camera - Broken?

This is rather internal use only, no need to expose this option to
the redo panel.